--- a/Desktop/Blazor/ApplicantTrackingPlatform/ApplicantTrackingPlatform.csproj
+++ b/Desktop/Blazor/ApplicantTrackingPlatform/ApplicantTrackingPlatform.csproj
@@ -51,11 +51,41 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BL\AddressBL.cs" />
+    <Compile Include="BL\CompanyBL.cs" />
+    <Compile Include="BL\JobBL.cs" />
+    <Compile Include="BL\JobSkillBL.cs" />
+    <Compile Include="BL\ManagerBL.cs" />
     <Compile Include="BL\PersonBL.cs" />
+    <Compile Include="BL\ProjectBL.cs" />
+    <Compile Include="BL\ProjectSkillBL.cs" />
     <Compile Include="BL\RoleBL.cs" />
     <Compile Include="DL\AddressDL.cs" />
+    <Compile Include="DL\CompanyDL.cs" />
+    <Compile Include="DL\JobDL.cs" />
+    <Compile Include="DL\JobSkillDL.cs" />
+    <Compile Include="DL\ManagerDL.cs" />
     <Compile Include="DL\PersonDL.cs" />
+    <Compile Include="DL\ProjectDL.cs" />
+    <Compile Include="DL\ProjectSkillDL.cs" />
     <Compile Include="DL\RoleDL.cs" />
+    <Compile Include="Forms\AddJob.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\AddJob.Designer.cs">
+      <DependentUpon>AddJob.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\AddProject.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\AddProject.Designer.cs">
+      <DependentUpon>AddProject.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Applicant.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Applicant.Designer.cs">
+      <DependentUpon>Applicant.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\DisplayJob.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -80,6 +110,24 @@
     <Compile Include="Forms\Job.Designer.cs">
       <DependentUpon>Job.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\ManagerProfile.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ManagerProfile.Designer.cs">
+      <DependentUpon>ManagerProfile.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\ViewProject.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ViewProject.Designer.cs">
+      <DependentUpon>ViewProject.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Recruiter.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Recruiter.Designer.cs">
+      <DependentUpon>Recruiter.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\SignIn.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -92,8 +140,23 @@
     <Compile Include="Forms\SignUp.Designer.cs">
       <DependentUpon>SignUp.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\ViewJob.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ViewJob.Designer.cs">
+      <DependentUpon>ViewJob.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Forms\AddJob.resx">
+      <DependentUpon>AddJob.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\AddProject.resx">
+      <DependentUpon>AddProject.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Applicant.resx">
+      <DependentUpon>Applicant.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\DisplayJob.resx">
       <DependentUpon>DisplayJob.cs</DependentUpon>
     </EmbeddedResource>
@@ -106,11 +169,23 @@
     <EmbeddedResource Include="Forms\Job.resx">
       <DependentUpon>Job.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ManagerProfile.resx">
+      <DependentUpon>ManagerProfile.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ViewProject.resx">
+      <DependentUpon>ViewProject.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Recruiter.resx">
+      <DependentUpon>Recruiter.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\SignIn.resx">
       <DependentUpon>SignIn.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\SignUp.resx">
       <DependentUpon>SignUp.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ViewJob.resx">
+      <DependentUpon>ViewJob.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
